# mixup

./: .gitignore  CMakeLists.txt  CMakeSourceFileList.cmake  Dockerfile  README.md  set_boost_root.sh
cmake/: FindAtlas.cmake
src/chainbin/: nnet3-chain-mixup-egs.cc
src/nnet3bin/: nnet3-mixup-egs.cc
